--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1> Mi curriculom </h1>
+    <img src=
+         <h2> Perfil profesional </h2>
+            <p>Alumno de IFP Hospitalet, enel ámbito de sistemasMicroinformático y Redes,actualmente cursando elsegundo año.</p>
+        
     
 </body>
 </html>
