--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1> Mi curriculom </h1>
     <h2> Perfil profesional </h2>
-            <p>Alumno de IFP Hospitalet, enel ámbito de sistemasMicroinformático y Redes,actualmente cursando elsegundo año.</p>
+            <p> <i> Alumno de IFP Hospitalet, enel ámbito de sistemasMicroinformático y Redes,actualmente cursando el segundo año. </i> </p>
     <h2> idiomas </h2>
     <ul>
-    <li> Español </li>
+        <li> Español </li>
     <li> Catalan </li>
     </ul>
     
