--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1> Mi curriculom </h1>
     <h2> Perfil profesional </h2>
+        <p> nombre: Héctor J
             <p> <i> Alumno de IFP Hospitalet, enel ámbito de sistemasMicroinformático y Redes,actualmente cursando el segundo año. </i> </p>
     <h2> idiomas </h2>
     <ul>
